<resources>
    <string name="app_name">Pop</string>
    <string name="username_hint">账号</string>
    <string name="user_password_hint">密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_sign_in">注册</string>
    <string name="layout_login_qq">QQ登录</string>
    <string name="layout_login_wechat">微信登录</string>
    <string name="tab_text_one">日常</string>
    <string name="tab_text_two">约跑</string>
    <string name="tab_text_three">社区</string>
    <string name="steps">步数</string>
    <string name="expect_steps_test">目标xxxx步</string>
    <string name="step_menu_setteing">设置</string>
    <string name="weather_menu_position">定位</string>
    //天气的一些
    <string name="weather_remind">今天天气不错哟，出去逛逛</string>
    <string name="weather_today">今天</string>
    <string name="weather_tomorrow">明天</string>
    <string name="weather_sport">运动指数</string>
    <string name="weather_cloth">穿衣指数</string>
    <string name="weather_air_condition">空调指数</string>
    <string name="weather_ray">紫外线</string>
    <string name="weather_cold">感冒指数</string>
    <string name="weather_wash_car">洗车指数</string>

    <string name="weather_failed">亲爱的，请检查您的网络</string>
    <string name="miletext">里程</string>
    <string name="expect_run_miles">目标xxxx公里</string>

    //查看好友信息的
    <string name="friend_title">个人资料</string>
    <string name="friend_follow">关注</string>
    <string name="friend_fans">粉丝</string>
    <string name="exp">经验值</string>
    <string name="lv">等级</string>
    <string name="walk">总步数</string>
    <string name="walk_best">最佳步数</string>
    <string name="run">总跑步</string>
    <string name="run_best">最佳跑步</string>
    //修改个人信息
    <string name="title">个人信息</string>
    <string name="head_image">头像</string>
    <string name="nick_name">昵称</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="sex">性别</string>
    <string name="password">登录密码</string>

    //错误界面
    <string name="error_server">服务器出了一些问题</string>
    <string name="error_network">您的网络出现了一些问题</string>
    <string name="pull_refresh">请下拉刷新</string>


    //我的任务
    <string name="task_title">我的任务</string>
    <string name="daily_step_task">每日4000步</string>
    <string name="daily_detail_task">任务详情:1659步/4000步</string>
    <string name="daily_run_task">每日2公里</string>
    <string name="daily_detail_task_run">任务详情:1599米/2000米</string>
    <string name="addition_task_title">4公里挑战赛</string>
    <string name="addition_task_detail">任务详情:0米/4000米</string>
    <string name="title_activity_run_house_result">RunHouseResultActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
