<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/login_style">
    <ImageView
        android:id="@+id/img_running"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/image_style"
        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_running"
        android:paddingTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            style="@style/image_name"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="number"
            style="@style/layout_input"
            />
        </LinearLayout>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_input_name">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            style="@style/image_password"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_password_hint"
            android:inputType="textPassword"
            style="@style/layout_input"
            />
        </LinearLayout>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/btn_login_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/layout_input_password"
        android:text="@string/btn_login"
        android:layout_marginTop="@dimen/spacing_normal"
        style="@style/btn_style"
        />
    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="@dimen/btn_login_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/btn_login"
        android:text="@string/btn_sign_in"
        android:layout_marginTop="@dimen/spacing_small"
        style="@style/btn_style"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_login_height"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/layout_login_qq"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_login_height"
            style="@style/layout_style_qq">
            <ImageView
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:src="@drawable/qqimage"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:text="@string/layout_login_qq"
                android:textColor="@color/white_light"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_login_wechat"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/layout_login_height"
            style="@style/layout_style_wechat">
            <ImageView
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:src="@drawable/wechat"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_normal"
                android:text="@string/layout_login_wechat"
                android:textColor="@color/white_light"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>