<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        </Toolbar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white_light"
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_large"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/head_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alter_head"
        android:layout_below="@id/top_bar"
        android:layout_marginTop="@dimen/alter_head_margin_top"
        android:background="@color/white_light"
        >
        <ImageView
            android:id="@+id/alter_head"
            android:src="@drawable/alter_head_image"
            android:layout_width="@dimen/alter_image_size_large"
            android:layout_height="@dimen/alter_image_size_large"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_image"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_large"
            android:layout_toRightOf="@id/alter_head"
            android:layout_marginLeft="@dimen/spacing_small"
            />
        <ImageView
            android:id="@+id/go_on"
            android:src="@drawable/go_on10"
            android:layout_width="@dimen/alter_image_size_small"
            android:layout_height="@dimen/alter_image_size_small"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <com.nexuslink.util.CircleImageView
            android:src="@drawable/headimage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/circleImageView"
            android:layout_toLeftOf="@id/go_on"
            android:layout_centerVertical="true"/>


    </RelativeLayout>
    <ImageView
        android:id="@+id/division"
        android:layout_below="@id/head_relative"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/spanish_gray"/>
    <RelativeLayout
        android:id="@+id/name_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alter_name"
        android:layout_below="@id/division"
        android:background="@color/white_light">
        <ImageView
            android:id="@+id/alter_name"
            android:src="@drawable/alter_head"
            android:layout_width="@dimen/alter_image_size"
            android:layout_height="@dimen/alter_image_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_large"
            android:layout_toRightOf="@id/alter_name"
            android:layout_marginLeft="@dimen/spacing_small"
            />
        <ImageView
            android:id="@+id/go_on_1"
            android:src="@drawable/go_on10"
            android:layout_width="@dimen/alter_image_size_small"
            android:layout_height="@dimen/alter_image_size_small"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jacob"
            android:layout_toLeftOf="@id/go_on_1"
            android:textSize="@dimen/font_large"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!--<ImageView-->
        <!--android:layout_below="@id/name_relative"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.5dp"-->
        <!--android:background="@color/gray_normal"-->
        <!--/>-->
    <RelativeLayout
    android:id="@+id/height_relative"
    android:layout_width="match_parent"
    android:layout_height="@dimen/alter_name"
    android:layout_below="@id/name_relative"
    android:layout_marginTop="@dimen/spacing_small"
    android:background="@color/white_light">
    <ImageView
        android:id="@+id/alter_info"
        android:src="@drawable/height"
        android:layout_width="@dimen/alter_image_size"
        android:layout_height="@dimen/alter_image_size"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/spacing_small"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:layout_centerVertical="true"
        android:textSize="@dimen/font_large"
        android:layout_toRightOf="@id/alter_info"
        android:layout_marginLeft="@dimen/spacing_small"
        />
    <ImageView
        android:id="@+id/go_on_2"
        android:src="@drawable/go_on10"
        android:layout_width="@dimen/alter_image_size_small"
        android:layout_height="@dimen/alter_image_size_small"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="修改"
        android:layout_toLeftOf="@id/go_on_2"
        android:textSize="@dimen/font_large"
        android:layout_centerVertical="true"/>
</RelativeLayout>
    <ImageView
        android:id="@+id/division2"
        android:layout_below="@id/height_relative"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/spanish_gray"/>
    <RelativeLayout
        android:id="@+id/weight_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alter_name"
        android:layout_below="@id/division2"
        android:background="@color/white_light">
        <ImageView
            android:id="@+id/alter_weight"
            android:src="@drawable/weight"
            android:layout_width="@dimen/alter_image_size"
            android:layout_height="@dimen/alter_image_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_large"
            android:layout_toRightOf="@id/alter_weight"
            android:layout_marginLeft="@dimen/spacing_small"
            />
        <ImageView
            android:id="@+id/go_on_4"
            android:src="@drawable/go_on10"
            android:layout_width="@dimen/alter_image_size_small"
            android:layout_height="@dimen/alter_image_size_small"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改"
            android:layout_toLeftOf="@id/go_on_4"
            android:textSize="@dimen/font_large"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/division3"
        android:layout_below="@id/weight_relative"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/spanish_gray"/>
    <RelativeLayout
        android:id="@+id/sex_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alter_name"
        android:layout_below="@id/division3"
        android:background="@color/white_light">
        <ImageView
            android:id="@+id/alter_sex"
            android:src="@drawable/sex"
            android:layout_width="@dimen/alter_image_size"
            android:layout_height="@dimen/alter_image_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_large"
            android:layout_toRightOf="@id/alter_sex"
            android:layout_marginLeft="@dimen/spacing_small"
            />
        <ImageView
            android:id="@+id/go_on_5"
            android:src="@drawable/go_on10"
            android:layout_width="@dimen/alter_image_size_small"
            android:layout_height="@dimen/alter_image_size_small"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改"
            android:layout_toLeftOf="@id/go_on_5"
            android:textSize="@dimen/font_large"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alter_name"
        android:layout_below="@id/sex_relative"
        android:background="@color/white_light"
        android:layout_marginTop="@dimen/spacing_small">
        <ImageView
            android:id="@+id/alter_password"
            android:src="@drawable/alter_password"
            android:layout_width="@dimen/alter_image_size"
            android:layout_height="@dimen/alter_image_size"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/spacing_small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_large"
            android:layout_toRightOf="@id/alter_password"
            android:layout_marginLeft="@dimen/spacing_small"
            />
        <ImageView
            android:id="@+id/go_on_3"
            android:src="@drawable/go_on10"
            android:layout_width="@dimen/alter_image_size_small"
            android:layout_height="@dimen/alter_image_size_small"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改"
            android:layout_toLeftOf="@id/go_on_3"
            android:textSize="@dimen/font_large"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/log_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_relative"
        android:background="@color/colorPrimary"
        android:text="退出登录"
        android:textColor="@color/white_light"
        android:textSize="@dimen/font_large"
        android:layout_margin="@dimen/spacing_huge"/>

</RelativeLayout>